--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 <body>
 
 <H1>Личная страница-отчет</H1>
-<H2>Студента Ситникова Владислава</H2>
+<H2>Студента Шевлякова Кирилла Александровича</H2>
 <H2>Группы ИДМ-22-04</H2>
 <H2>По дисциплине "Интернет-технологии"</H2>
 <H3>Лабораторная №1. Экосистема разработки программ с открытым кодом</H3>
@@ -99,9 +99,9 @@
     <li> Зарегистрироваться на GitHub.</li>
     <li> Создать репозиторий для хоста своей страницы. </li>
     <li> Создать личную страницу-отчет. </li>
-    <li> Написать реферат по двум вопросам из 10 билета. </li>
+    <li> Написать реферат по двум вопросам из 27 билета. </li>
   </ol>
-<p1>Результат -  у вас на экране! А c рефератом можете ознакомиться перейдя по <a href="https://github.com/CblNCoBaKu/Musor/wiki/%D0%91%D0%B8%D0%BB%D0%B5%D1%82-10">ссылке</a>. </p1>  
+<p1>Результат -  у вас на экране! А c рефератом можете ознакомиться перейдя по <a href="https://github.com/stankin/inet-2022/wiki/exam27">ссылке</a>. </p1>  
 <H3>Лабораторная №2. Разработка простого приложения</H3>
   <p>Цель работы -  проектирование и разработка коллективного приложения. </p>
   <p1>В рамках достижения данной цели были выполнены следующие шаги: </p1>
