--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             #navLinks ul li.active {
 			
 			
-                background-color: #333333;
+                background-color: #FFFF77;
                 color: #FFFFFF;
                 outline-width: 7px;
             }
