--- a/index.html
+++ b/index.html
@@ -108,18 +108,18 @@
   <ol>
     <li> Была сформирована команда в составе восьми человек и распределены роли в проекте:
       <ul>
-        <li><a href="">Кирилл Шевляков</a> - Руководитель проекта.  </li>
-        <li><a href="">Григорий Саркисьянц</a> - Системный программист. </li>
-        <li><a href="">Илья Денисов</a> - Ответственный за внедрение. </li>
-        <li><a href="">Ситников Владислав</a> - Ответственный за научные исследования.  </li>
-        <li><a href="">Антон Кузьмин</a> - Ответственный за бизнес-анализ. </li>
-        <li><a href="">Татьяна Сорокина</a> - Ответственная за администрирование. </li>
-        <li><a href="">Александр Баркан</a> - Прикладной программист. </li>
-        <li><a href="">Майя Исии</a> - Ответственная за консалтинг.  </li>
+        <li><a href="https://github.com/Magystr/str2709.github.io">Кирилл Шевляков</a> - Руководитель проекта.  </li>
+        <li><a href="https://github.com/julesinspection/Grigory">Григорий Саркисьянц</a> - Системный программист. </li>
+        <li><a href="https://github.com/ilya0667/-ilya0667.github.io">Илья Денисов</a> - Ответственный за внедрение. </li>
+        <li><a href="https://github.com/CblNCoBaKu/CblNCoBaKu.github.io">Ситников Владислав</a> - Ответственный за научные исследования.  </li>
+        <li><a href="https://github.com/Gorgeouskad/KuzminA.github.io">Антон Кузьмин</a> - Ответственный за бизнес-анализ. </li>
+        <li><a href="https://github.com/TatyanaSor">Татьяна Сорокина</a> - Ответственная за администрирование. </li>
+        <li><a href="https://github.com/AlexandrBarkan">Александр Баркан</a> - Прикладной программист. </li>
+        <li><a href="https://github.com/mayaishii">Майя Исии</a> - Ответственная за консалтинг.  </li>
       </ul>
       </li>
     <li> Было выбрано название команды - TWITs. </li>
-    <li> Было спроектировано и разработано приложение, ознакомиться с которым можно на <a href="">целевой странице</a> </li>
+    <li> Было спроектировано и разработано приложение, ознакомиться с которым можно на <a href="https://vk.com/away.php?to=https%3A%2F%2Fbubadev.github.io%2FTWITs-Website%2F&cc_key=">целевой странице</a> </li>
   </ol>
 <H3>Лабораторная №3. Настройка локальной сети передачи данных</H3>
   
@@ -131,7 +131,7 @@
     <li> Сетевым устройствам были присвоены адреса из выбранных диапазонов. </li>
     <li> Была настроена статическая маршрутизация на маршрутизаторах. </li>
     <li> Была проверена работоспособность сети - с ПК0 был отправлен пинг на ПК2. </li>
-    <li> <a href="https://github.com/CblNCoBaKu/Musor/blob/main/%D0%94%D0%BB%D1%8F%20%D0%98%D0%A2%20(1).pkt">Файл модели сети</a>. </li>
+    <li> <a href="https://github.com/Magystr/str2709.github.io/blob/215ea2babb2589238045d8a15d7bf77f6e56d079/%D0%A1%D1%85%D0%B5%D0%BC%D0%B0.pkt">Файл модели сети</a>. </li>
   </ol>
   <div id="contentContainer">
     <div id="wrapper">
