--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         <li><a href="https://github.com/CblNCoBaKu/CblNCoBaKu.github.io">Ситников Владислав</a> - Ответственный за научные исследования.  </li>
         <li><a href="https://github.com/Gorgeouskad/KuzminA.github.io">Антон Кузьмин</a> - Ответственный за бизнес-анализ. </li>
         <li><a href="https://github.com/TatyanaSor">Татьяна Сорокина</a> - Ответственная за администрирование. </li>
-        <li><a href="https://github.com/AlexandrBarkan">Александр Баркан</a> - Прикладной программист. </li>
+        <li><a href="https://github.com/AlexandrBarkan/BarkanA.github.io">Александр Баркан</a> - Прикладной программист. </li>
         <li><a href="https://github.com/mayaishii">Майя Исии</a> - Ответственная за консалтинг.  </li>
       </ul>
       </li>
