--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
       </ul>
       </li>
     <li> Было выбрано название команды - TWITs. </li>
-    <li> Было спроектировано и разработано приложение, ознакомиться с которым можно на <a href="https://vk.com/away.php?to=https%3A%2F%2Fbubadev.github.io%2FTWITs-Website%2F&cc_key=">целевой странице</a> </li>
+    <li> Было спроектировано и разработано приложение, ознакомиться с которым можно на <a href="https://bubadev.github.io/TWITs-Website/">целевой странице</a> </li>
   </ol>
 <H3>Лабораторная №3. Настройка локальной сети передачи данных</H3>
   
