--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     <li> Создать личную страницу-отчет. </li>
     <li> Написать реферат по двум вопросам из 27 билета. </li>
   </ol>
-<p1>Результат -  у вас на экране! А c рефератом можете ознакомиться перейдя по <a href="https://github.com/stankin/inet-2022/wiki/exam27">ссылке</a>. </p1>  
+<p1>Результат -  у вас на экране! А c рефератом можете ознакомиться перейдя по <a href="https://github.com/stankin/inet-2022/wiki/exam27">ссылке</a> (вклад в <a href="https://github.com/stankin/inet-2022/wiki/exam27/_compare/e6fab461998e6a983ecaed69046f2da4e25a1d1d...d3d4156b18712c3f344a84871135ebb057415a33">реферат</a>). </p1>  
 <H3>Лабораторная №2. Разработка простого приложения</H3>
   <p>Цель работы -  проектирование и разработка коллективного приложения. </p>
   <p1>В рамках достижения данной цели были выполнены следующие шаги: </p1>
@@ -119,7 +119,8 @@
       </ul>
       </li>
     <li> Было выбрано название команды - TWITs. </li>
-    <li> Было спроектировано и разработано приложение, ознакомиться с которым можно на <a href="https://bubadev.github.io/TWITs-Website/">целевой странице</a> </li>
+    <li> Было спроектировано и разработано приложение, ознакомиться с которым можно на <a href="https://julesinspection.github.io/TWITS-website/">целевой странице</a> (<a href="https://github.com/julesinspection/TWITS-website">репозиторий</a>) </li>
+	<li> Проект был зарегистрирован на участие в <a href="https://idmit.ru/">конкурсе</a>. </li>
   </ol>
 <H3>Лабораторная №3. Настройка локальной сети передачи данных</H3>
   
