--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
       </ul>
       </li>
     <li> Было выбрано название команды - TWITs. </li>
-    <li> Было спроектировано и разработано приложение, ознакомиться с которым можно на <a href="https://julesinspection.github.io/TWITS-website/">целевой странице</a> (<a href="https://github.com/julesinspection/TWITS-website">репозиторий</a>) </li>
+    <li> Было спроектировано и разработано приложение, ознакомиться с которым можно на <a href="https://julesinspection.github.io/TWITS-website/">целевой странице</a> (<a href="https://github.com/julesinspection/TWITS-website">репозиторий</a>). </li>
 	<li> Проект был зарегистрирован на участие в <a href="https://idmit.ru/">конкурсе</a>. </li>
   </ol>
 <H3>Лабораторная №3. Настройка локальной сети передачи данных</H3>
